--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/settings.js"></script>
     <script src="js/youtube.js"></script>
   </head>
   <body ng-app="starter">
