--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>YouTuPi</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="jquery.mobile-1.3.1.min.css" />
 		<link rel="stylesheet" href="jquery.mobile.simpledialog.min.css" />
 		<link rel="stylesheet" href="youtupi.css" />
@@ -37,7 +37,18 @@
 					<h3>No entries in the playlist</h3>
 				</div>
 				<div id="playlist-playing" style="display:none;">
-					<h3>Now Playing</h3>
+					<div class="ui-grid-a">
+						<div class="ui-block-a"><h3>Now Playing</h3></div>
+						<div class="ui-block-b">
+							<div data-role="fieldcontain">
+								<label for="playlist-reorder">Reorder:</label>
+								<select name="playlist-reorder" id="playlist-reorder" data-role="slider">
+									<option value="off" selected="selected">Off</option>
+									<option value="on">On</option>
+								</select>
+							</div>
+						</div>
+					</div>
 					<div>
 						<ul id="playlist-list" data-inset="true" data-role="listview"></ul>
 					</div>
