--- a/static/index.html
+++ b/static/index.html
@@ -30,19 +30,17 @@
 				<div data-role="collapsible-set" data-theme="c" data-content-theme="d">
 					<div data-role="collapsible" data-iconpos="right" data-collapsed="false">
 						<h3>Playlist Control</h3>
-						<div class="ui-grid-a">
-							<div class="ui-block-a" id="playlist-controls" data-role="controlgroup" data-type="horizontal" >
-								<a href="#" data-role="button" data-icon="forward" id="next-button" class="active-on-playing ui-disabled">Next</a>
-								<a href="#" data-role="button" title="Pause/Resume" id="pause-button" class="active-on-playing ui-disabled">||</a>
-								<a href="#" data-role="button" data-icon="delete" id="stop-button" class="active-on-playing ui-disabled">Stop</a>
-							</div>
-							<div class="ui-block-b">
-								<label for="playlist-reorder">Drag and drop reorder:</label>
-								<select name="playlist-reorder" id="playlist-reorder" data-role="slider">
-									<option value="off" selected="selected">Off</option>
-									<option value="on">On</option>
-								</select>
-							</div>
+						<div id="playlist-controls" data-role="controlgroup" data-type="horizontal" >
+							<a href="#" data-role="button" data-icon="forward" id="next-button" class="active-on-playing ui-disabled">Next</a>
+							<a href="#" data-role="button" title="Pause/Resume" id="pause-button" class="active-on-playing ui-disabled">||</a>
+							<a href="#" data-role="button" data-icon="delete" id="stop-button" class="active-on-playing ui-disabled">Stop</a>
+						</div>
+						<div>
+							<label for="playlist-reorder">Drag and drop reorder:</label>
+							<select name="playlist-reorder" id="playlist-reorder" data-role="slider">
+								<option value="off" selected="selected">Off</option>
+								<option value="on">On</option>
+							</select>
 						</div>
 					</div>
 					<div data-role="collapsible" data-iconpos="right" data-collapsed="true">
@@ -50,20 +48,18 @@
 						<div id="audiotrack-controls" data-role="controlgroup" data-type="horizontal" >
 							<a href="#" data-role="button" data-icon="minus" title="Volume down" id="voldown-button" class="active-on-playing ui-disabled">Vol Down</a>
 							<a href="#" data-role="button" data-icon="plus" data-iconpos="right" title="Volume up" id="volup-button" class="active-on-playing ui-disabled">Vol Up</a>
-							<a href="#" data-role="button" data-icon="arrow-l" title="Previous Audio Track" id="prevaudiotrack-button" class="active-on-playing ui-disabled">Prev Audio Track</a>
+							<a href="#" data-role="button" data-icon="arrow-l" title="Prev Audio Track" id="prevaudiotrack-button" class="active-on-playing ui-disabled">Prev Audio Track</a>
 							<a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" title="Next Audio Track" id="nextaudiotrack-button" class="active-on-playing ui-disabled">Next Audio Track</a>
 						</div>
-						<div class="ui-grid-a">
-							<div class="ui-block-a" id="seek-controls" data-role="controlgroup" data-type="horizontal" >
-									<a href="#" data-role="button" title="seek back 10m" id="seekbacklarge-button" class="active-on-playing ui-disabled">&lt;&lt;</a>
-									<a href="#" data-role="button" title="seek back 30s" id="seekbacksmall-button" class="active-on-playing ui-disabled">&lt;</a>
-									<a href="#" data-role="button" title="Pause/Resume" id="pause-button2" class="active-on-playing ui-disabled">||</a>
-									<a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button" class="active-on-playing ui-disabled">&gt;</a>
-									<a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button" class="active-on-playing ui-disabled">&gt;&gt;</a>
-							</div>
-							<div class="ui-block-b">
-									<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
-							</div>
+						<div id="seek-controls" data-role="controlgroup" data-type="horizontal" >
+								<a href="#" data-role="button" title="seek back 10m" id="seekbacklarge-button" class="active-on-playing ui-disabled">&lt;&lt;</a>
+								<a href="#" data-role="button" title="seek back 30s" id="seekbacksmall-button" class="active-on-playing ui-disabled">&lt;</a>
+								<a href="#" data-role="button" title="Pause/Resume" id="pause-button2" class="active-on-playing ui-disabled">||</a>
+								<a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button" class="active-on-playing ui-disabled">&gt;</a>
+								<a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button" class="active-on-playing ui-disabled">&gt;&gt;</a>
+						</div>
+						<div>
+								<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
 						</div>
 					</div>
 				</div>
