player action as button data

--- a/static/index.html
+++ b/static/index.html
@@ -31,9 +31,9 @@
 					<div data-role="collapsible" data-iconpos="right" data-collapsed="false">
 						<h3>Playlist Control</h3>
 						<div id="playlist-controls" data-role="controlgroup" data-type="horizontal" >
-							<a href="#" data-role="button" data-icon="forward" id="next-button" class="active-on-playing ui-disabled">Next</a>
-							<a href="#" data-role="button" title="Pause/Resume" id="pause-button" class="active-on-playing ui-disabled">||</a>
-							<a href="#" data-role="button" data-icon="delete" id="stop-button" class="active-on-playing ui-disabled">Stop</a>
+							<a href="#" data-role="button" data-icon="forward" data-player-action="play" id="next-button" class="active-on-playing ui-disabled">Next</a>
+							<a href="#" data-role="button" title="Pause/Resume" data-player-action="pause" class="active-on-playing ui-disabled">||</a>
+							<a href="#" data-role="button" data-icon="delete" data-player-action="stop" class="active-on-playing ui-disabled">Stop</a>
 						</div>
 						<div>
 							<label for="playlist-reorder">Drag and drop reorder:</label>
@@ -46,17 +46,17 @@
 					<div data-role="collapsible" data-iconpos="right" data-collapsed="true">
 						<h3>Track Control</h3>
 						<div id="audiotrack-controls" data-role="controlgroup" data-type="horizontal" >
-							<a href="#" data-role="button" data-icon="minus" title="Volume down" id="voldown-button" class="active-on-playing ui-disabled">Vol Down</a>
-							<a href="#" data-role="button" data-icon="plus" data-iconpos="right" title="Volume up" id="volup-button" class="active-on-playing ui-disabled">Vol Up</a>
-							<a href="#" data-role="button" data-icon="arrow-l" title="Prev Audio Track" id="prevaudiotrack-button" class="active-on-playing ui-disabled">Prev Audio Track</a>
-							<a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" title="Next Audio Track" id="nextaudiotrack-button" class="active-on-playing ui-disabled">Next Audio Track</a>
+							<a href="#" data-role="button" data-icon="minus" title="Volume down" data-player-action="voldown" class="active-on-playing ui-disabled">Vol Down</a>
+							<a href="#" data-role="button" data-icon="plus" data-iconpos="right" title="Volume up" data-player-action="volup" class="active-on-playing ui-disabled">Vol Up</a>
+							<a href="#" data-role="button" data-icon="arrow-l" title="Prev Audio Track" data-player-action="prevaudiotrack" class="active-on-playing ui-disabled">Prev Audio Track</a>
+							<a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" title="Next Audio Track" data-player-action="nextaudiotrack" class="active-on-playing ui-disabled">Next Audio Track</a>
 						</div>
 						<div id="seek-controls" data-role="controlgroup" data-type="horizontal" >
-								<a href="#" data-role="button" title="seek back 10m" id="seekbacklarge-button" class="active-on-playing ui-disabled">&lt;&lt;</a>
-								<a href="#" data-role="button" title="seek back 30s" id="seekbacksmall-button" class="active-on-playing ui-disabled">&lt;</a>
-								<a href="#" data-role="button" title="Pause/Resume" id="pause-button2" class="active-on-playing ui-disabled">||</a>
-								<a href="#" data-role="button" title="seek forward 30s" id="seekforwardsmall-button" class="active-on-playing ui-disabled">&gt;</a>
-								<a href="#" data-role="button" title="seek forward 10m" id="seekforwardlarge-button" class="active-on-playing ui-disabled">&gt;&gt;</a>
+								<a href="#" data-role="button" title="seek back 10m" data-player-action="seekbacklarge" class="active-on-playing ui-disabled">&lt;&lt;</a>
+								<a href="#" data-role="button" title="seek back 30s" data-player-action="seekbacksmall" class="active-on-playing ui-disabled">&lt;</a>
+								<a href="#" data-role="button" title="Pause/Resume" data-player-action="pause" class="active-on-playing ui-disabled">||</a>
+								<a href="#" data-role="button" title="seek forward 30s" data-player-action="seekforwardsmall" class="active-on-playing ui-disabled">&gt;</a>
+								<a href="#" data-role="button" title="seek forward 10m" data-player-action="seekforwardlarge" class="active-on-playing ui-disabled">&gt;&gt;</a>
 						</div>
 						<div>
 								<input type="range" name="position" id="position" value="0" min="0" max="100" step="10" data-highlight="true" class="ui-hidden-accessible">
