extract ui functions to separate file

--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
 		<script src="jquery.mobile.simpledialog2.min.js"></script>
 		<script src="util.storage.js"></script>
 		<script src="youtupi.js"></script>
+		<script src="youtupi.ui.js"></script>
 		<script src="youtupi.youtube.js"></script>
 	</head>
 	<body>
