Added UI setting: Start video with volume X (omxplayer only).

--- a/static/index.html
+++ b/static/index.html
@@ -144,6 +144,8 @@
 				 	<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-left">Close</a>
 					<h3>Settings</h3>
 					<div class="ui-body ui-body-c">
+						<label for="volume">Start Volume (dB):</label>
+						<input type="range" name="volume" id="volume" value="-18" min="-30" max="0" step="3" />
 						<label for="quality">Video quality:</label>
 						<select name="select-choice-1" id="quality">
 							<option value="low">Low quality</option>
