--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
 					<a href="#" data-role="button" data-icon="delete" id="stop-button" class="active-on-playing ui-disabled">Stop</a>
 					<!--a href="#playerControl" data-role="button" data-icon="gear" data-iconpos="right" data-transition="pop" data-rel="popup" id="player-button" class="ui-disabled">Player</a-->
 				</div>
-				<div id="playlist-empty">
+				<div id="playlist-empty" style="display:none">
 					<h3>No entries in the playlist</h3>
 				</div>
 				<div id="playlist-playing" style="display:none;">
@@ -71,8 +71,10 @@
 						<ul id="playlist-list" data-inset="true" data-role="listview"></ul>
 					</div>
 				</div>
-				<div id="spinner" class="spinner" style="display:none;">
-					<img id="img-spinner" src="images/spinner.gif" alt="Loading"/>
+				<div id="spinnercontainer" class="spinnercontainer">
+					<div id="spinner" class="spinner" style="opacity: 1;">
+						<img id="img-spinner" src="images/spinner.gif" alt="Loading"/> ...refreshing playlist...
+					</div>
 				</div>
 <!--
 				<div data-role="popup" data-overlay-theme="a" data-content-theme="c" id="playerControl" class="ui-content">
