Added feature: Browse local files

--- a/static/index.html
+++ b/static/index.html
@@ -121,7 +121,8 @@
 						<div class="ui-block-a">
 							<select name="select-choice-0" id="engine">
 								<option value="youtube" selected="selected">Youtube</option>
-								<option value="local">Local files</option>
+								<option value="local">Search local</option>
+								<option	value="local-dir">Browse local</option>
 							</select>
 						</div>
 						<div class="ui-block-b">
