Added feature: Paste Video URL

--- a/static/index.html
+++ b/static/index.html
@@ -123,6 +123,7 @@
 								<option value="youtube" selected="selected">Youtube</option>
 								<option value="local">Search local</option>
 								<option	value="local-dir">Browse local</option>
+								<option value="url">Paste Video URL</option>
 							</select>
 						</div>
 						<div class="ui-block-b">
