--- a/static/index.html
+++ b/static/index.html
@@ -94,7 +94,9 @@
 						<div class="ui-block-a">
 							<select name="select-choice-0" id="engine">
 								<option value="youtube" selected="selected">Youtube</option>
-								<option value="local">Local files</option>
+								<option value="local">Search local</option>
+								<option	value="local-dir">Browse local</option>
+								<option value="url">Paste Video URL</option>
 							</select>
 						</div>
 						<div class="ui-block-b">
