--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" href="jquery.mobile.simpledialog.min.css" />
+		<link rel="stylesheet" href="jquery-ui-1.12.1.min.css" />
 		<link rel="stylesheet" href="youtupi.css" />
 		<script src="jquery-1.11.1.min.js"></script>
-		<script src="jquery.ui-1.9.1.min.js"></script>
+		<script src="jquery-ui-1.12.1.min.js"></script>
 		<script src="jquery.ui.touch-punch.min.js"></script>
 		<script src="jquery.json-2.4.min.js"></script>
 		<script src="jquery.mobile-1.4.5.min.js"></script>
