--- a/static/index.html
+++ b/static/index.html
@@ -67,7 +67,7 @@
 						</div>
 					</div>
 					<div>
-						<ul id="playlist-list" data-inset="true" data-role="listview"></ul>
+						<ul id="playlist-list" data-inset="true" data-role="listview" data-count-theme="c"></ul>
 					</div>
 					<div>
 						<label for="playlist-reorder">Drag and drop reorder:</label>
