--- a/static/index.html
+++ b/static/index.html
@@ -69,7 +69,7 @@
 					<div>
 						<ul id="playlist-list" data-inset="true" data-role="listview" data-count-theme="c"></ul>
 					</div>
-					<div>
+					<div id="reorder-control">
 						<label for="playlist-reorder">Drag and drop reorder:</label>
 						<select name="playlist-reorder" id="playlist-reorder" data-role="slider">
 							<option value="off" selected="selected">Off</option>
