--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
 		<script src="util.storage.js"></script>
 		<script src="youtupi.js"></script>
 		<script src="youtupi.ui.js"></script>
-		<script src="youtupi.youtube.js"></script>
+		<script src="youtupi.search.js"></script>
 	</head>
 	<body>
 		<div data-role="page" id="playlist">
@@ -137,7 +137,6 @@
 						</select>
 						<label for="slider">Show # results:</label>
 						<input type="range" name="slider" id="slider" value="25" min="10" max="50"  />
-						<input type="hidden" name="pageNumber" id="pageNumber" value="1"  />
 						<label for="save-history">Store loaded items in history:</label>
 						<select name="save-history" id="save-history" data-role="slider">
 							<option value="off">Off</option>
