--- a/static/index.html
+++ b/static/index.html
@@ -114,11 +114,13 @@
 					<div id="spinner-search" class="spinner" style="display:none;">
 						<img src="images/spinner.gif" alt="Loading"/>
 					</div>
-					<div id="results-end-controls" data-role="controlgroup" data-type="horizontal">
-						<a href="#" data-role="button" data-icon="arrow-l" data-iconpos="left" id="prev-page-button" class="ui-disabled">Prev. page</a>
-						<a href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" id="next-page-button" class="ui-disabled">Next page</a>
-						<a href="#" data-role="button" data-icon="plus" id="add-all-button" class="ui-disabled">Add all</a>
-						<a href="#" data-role="button" data-icon="refresh" id="add-all-random-button" class="ui-disabled">Random add all</a>
+					<div id="results-end-controls" data-role="navbar">
+						<ul>
+							<li><a href="#" data-icon="arrow-l" id="prev-page-button" class="ui-disabled">Prev. page</a></li>
+							<li><a href="#" data-icon="arrow-r" id="next-page-button" class="ui-disabled">Next page</a></li>
+							<li><a href="#" data-icon="plus" id="add-all-button" class="ui-disabled">Add all</a></li>
+							<li><a href="#" data-icon="refresh" id="add-all-random-button" class="ui-disabled">Random add all</a></li>
+						</ul>
 					</div>
 				</div>
 				<div data-role="popup" data-overlay-theme="a" data-content-theme="c" id="settings" class="ui-content">
