--- a/static/index.html
+++ b/static/index.html
@@ -103,6 +103,7 @@
 								<option value="local">Search local</option>
 								<option	value="local-dir">Browse local</option>
 								<option value="url">Paste Video URL</option>
+								<option value="preset">Presets</option>
 							</select>
 						</div>
 						<div class="ui-block-b">
