related video link

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
 				<div data-role="navbar">
 					<ul>
 						<li><a href="#playlist" data-theme="b" class="link-playlist">Playlist</a></li>
-						<li><a href="#search">Search</a></li>
+						<li><a href="#search" class="link-search">Search</a></li>
 					</ul>
 				</div>
 			</div>
