change subitlte track

--- a/static/index.html
+++ b/static/index.html
@@ -35,16 +35,18 @@
 							<ul>
 							<li><a href="#" data-player-action="play" id="next-button" data-icon="forward" class="active-on-playing ui-disabled">Next</a></li>
 							<li><a href="#" data-player-action="stop" id="stop-button" data-icon="delete" class="active-on-playing ui-disabled">Stop</a></li>
+							<li><a href="#" data-player-action="voldown" title="Volume down" data-icon="minus" class="active-on-playing ui-disabled">Vol. Down</a></li>
+							<li><a href="#" data-player-action="volup" title="Volume up" data-icon="plus" class="active-on-playing ui-disabled">Vol. Up</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="ui-block-b">
 						<div id="volume-controls" data-role="navbar" data-iconpos="top">
 							<ul>
-							<li><a href="#" data-player-action="voldown" title="Volume down" data-icon="minus" class="active-on-playing ui-disabled">Vol. Down</a></li>
-							<li><a href="#" data-player-action="volup" title="Volume up" data-icon="plus" class="active-on-playing ui-disabled">Vol. Up</a></li>
 							<li><a href="#" data-player-action="prevaudiotrack" title="Prev Audio Track" data-icon="arrow-l" class="active-on-playing ui-disabled">Audio Prev</a></li>
 							<li><a href="#" data-player-action="nextaudiotrack" title="Next Audio Track" data-icon="arrow-r" class="active-on-playing ui-disabled">Audio Next</a></li>
+							<li><a href="#" data-player-action="prevsubtitle" title="Prev Audio Track" data-icon="carat-d" class="active-on-playing ui-disabled">Sub Prev</a></li>
+							<li><a href="#" data-player-action="nextsubtitle" title="Next Audio Track" data-icon="carat-u" class="active-on-playing ui-disabled">Sub Next</a></li>
 							</ul>
 						</div>
 					</div>
