--- a/static/index.html
+++ b/static/index.html
@@ -24,8 +24,8 @@
 				<h1>YouTuPi</h1>
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#playlist" data-theme="b" class="link-playlist">Playlist</a></li>
-						<li><a href="#search" class="link-search">Search</a></li>
+						<li><a href="#playlist" data-theme="b" data-i18n="tab.playlist" class="link-playlist">Playlist</a></li>
+						<li><a href="#search" data-i18n="tab.search" class="link-search">Search</a></li>
 					</ul>
 				</div>
 			</div>
@@ -34,20 +34,20 @@
 					<div class="ui-block-a">
 						<div id="playlist-controls" data-role="navbar" data-iconpos="top">
 							<ul>
-							<li><a href="#" data-player-action="play" id="next-button" data-icon="forward" class="active-on-playing ui-disabled">Next</a></li>
-							<li><a href="#" data-player-action="stop" id="stop-button" data-icon="delete" class="active-on-playing ui-disabled">Stop</a></li>
-							<li><a href="#" data-player-action="voldown" title="Volume down" data-icon="minus" class="active-on-playing ui-disabled">Vol. Down</a></li>
-							<li><a href="#" data-player-action="volup" title="Volume up" data-icon="plus" class="active-on-playing ui-disabled">Vol. Up</a></li>
+							<li><a href="#" data-player-action="play" id="next-button" data-icon="forward" data-i18n="btn.next" class="active-on-playing ui-disabled">Next</a></li>
+							<li><a href="#" data-player-action="stop" id="stop-button" data-icon="delete" data-i18n="btn.stop" class="active-on-playing ui-disabled">Stop</a></li>
+							<li><a href="#" data-player-action="voldown" title="Volume down" data-icon="minus" data-i18n="btn.volume.down" class="active-on-playing ui-disabled">Vol. Down</a></li>
+							<li><a href="#" data-player-action="volup" title="Volume up" data-icon="plus" data-i18n="btn.volume.up" class="active-on-playing ui-disabled">Vol. Up</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="ui-block-b">
 						<div id="volume-controls" data-role="navbar" data-iconpos="top">
 							<ul>
-							<li><a href="#" data-player-action="prevaudiotrack" title="Prev Audio Track" data-icon="arrow-l" class="active-on-playing ui-disabled">Audio Prev</a></li>
-							<li><a href="#" data-player-action="nextaudiotrack" title="Next Audio Track" data-icon="arrow-r" class="active-on-playing ui-disabled">Audio Next</a></li>
-							<li><a href="#" data-player-action="prevsubtitle" title="Prev Audio Track" data-icon="carat-d" class="active-on-playing ui-disabled">Sub Prev</a></li>
-							<li><a href="#" data-player-action="nextsubtitle" title="Next Audio Track" data-icon="carat-u" class="active-on-playing ui-disabled">Sub Next</a></li>
+							<li><a href="#" data-player-action="prevaudiotrack" title="Prev Audio Track" data-icon="arrow-l" data-i18n="btn.audio.prev" class="active-on-playing ui-disabled">Audio Prev</a></li>
+							<li><a href="#" data-player-action="nextaudiotrack" title="Next Audio Track" data-icon="arrow-r" data-i18n="btn.audio.next" class="active-on-playing ui-disabled">Audio Next</a></li>
+							<li><a href="#" data-player-action="prevsubtitle" title="Prev Audio Track" data-icon="carat-d" data-i18n="btn.sub.prev" class="active-on-playing ui-disabled">Sub Prev</a></li>
+							<li><a href="#" data-player-action="nextsubtitle" title="Next Audio Track" data-icon="carat-u" data-i18n="btn.sub.next" class="active-on-playing ui-disabled">Sub Next</a></li>
 							</ul>
 						</div>
 					</div>
@@ -82,7 +82,7 @@
 				</div>
 				<div id="spinnercontainer" class="spinnercontainer">
 					<div id="spinner" class="spinner" style="opacity: 1;">
-						<img id="img-spinner" src="images/spinner.gif" alt="Loading"/> ...refreshing playlist...
+						<img id="img-spinner" src="images/spinner.gif" alt="Loading"/><span data-i18n="refreshing">...refreshing playlist...</span>
 					</div>
 				</div>
 			</div>
@@ -92,8 +92,8 @@
 				<h1>YouTuPi</h1>
 				<div data-role="navbar">
 					<ul>
-						<li><a href="#playlist" class="link-playlist">Playlist</a></li>
-						<li><a href="#search" data-theme="b">Search</a></li>
+						<li><a href="#playlist" data-i18n="tab.playlist" class="link-playlist">Playlist</a></li>
+						<li><a href="#search" data-theme="b" data-i18n="tab.search" >Search</a></li>
 					</ul>
 				</div>
 			</div>
@@ -151,20 +151,5 @@
 				</div>
 			</div>
 		</div>
-		<script>
-			$(document).ready(function() {
-				jQuery.i18n.properties({
-					debug: true,
-					mode: 'map',
-					name: 'Messages', 
-					path: '/static/',
-					callback: function() { 
-						$("[data-i18n]").each(function(index) {
-							$(this).text($.i18n.prop($(this).attr("data-i18n")));
-						});
-					}
-				});
-			});
-		</script>
 	</body>
 </html>
